<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/etNeedyName"
        android:inputType="textPersonName"
        android:background="@drawable/rounded_corner"
        android:layout_marginBottom="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:gravity="center"
        android:lines="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/etNeedyId"
        android:background="@drawable/rounded_corner"
        android:layout_marginBottom="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:gravity="center"
        android:lines="1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tel"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/etNeedyTel"
        android:inputType="number"
        android:background="@drawable/rounded_corner"
        android:layout_marginBottom="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:gravity="center"
        android:lines="1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/etNeedyEmail"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_corner"
        android:layout_marginBottom="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:gravity="center"
        android:lines="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/etNeedyAddress"
        android:inputType="textPostalAddress"
        android:background="@drawable/rounded_corner"
        android:layout_marginBottom="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:gravity="center"
        android:lines="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/etNeedyPassword"
        android:inputType="textPassword"
        android:background="@drawable/rounded_corner"
        android:layout_marginBottom="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/re_password"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/etNeedyReTypePassword"
        android:inputType="textPassword"
        android:background="@drawable/rounded_corner"
        android:layout_marginBottom="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/btnNeedyRegister"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button"/>

</LinearLayout>