<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1"
    android:gravity="bottom">

    <EditText
        android:id="@+id/etId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:hint="@string/id"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textSize="25sp"
        android:lines="1"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/rounded_button"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnNotRegistered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@android:color/transparent"
        android:text="@string/not_registered"
        android:textSize="20sp" />
</LinearLayout>