<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:layout_marginBottom="50dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id"
        android:textSize="25sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/etRegisterId"
        android:background="@drawable/rounded_corner"
        android:layout_marginBottom="15dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:gravity="center"
        android:lines="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="25sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/etRegisterPassword"
        android:inputType="textPassword"
        android:background="@drawable/rounded_corner"
        android:layout_marginBottom="15dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/re_password"
        android:textSize="25sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/etRegisterReTypePassword"
        android:inputType="textPassword"
        android:background="@drawable/rounded_corner"
        android:layout_marginBottom="15dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/btnRegister"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button"/>

</LinearLayout>